# aarogya-atlas

./: .gitignore  LICENSE  Makefile  README.md
apps/api/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
apps/api/aarogya_api/: __init__.py  agent.py  app.py  db.py  local_llm.py  observability.py  settings.py  tools.py  trust.py
apps/api/aarogya_api/vf_schema/: __init__.py
apps/api/db/: schema.sql
apps/api/scripts/: ingest_osm.py  seed_synthetic.py
apps/api/tests/: test_recovery.py
apps/web/: next.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/components/: AgentChat.tsx  CmdK.tsx  FinalAnswer.tsx  Footer.tsx  Header.tsx  IdleHero.tsx  LiveStatus.tsx  MapView.tsx  ReasoningDrawer.tsx  Suggestions.tsx  TraceStep.tsx
apps/web/src/lib/: api.ts
docs/: BRAND.md  DATABRICKS_DEPLOYMENT.md  DEMO_SCRIPT.md  EVAL_REPORT.md  INTEL_REPORT.md  JUDGE_SIM.md  LIGHTHOUSE_REPORT.md  LOOM_PRODUCT_SCRIPT.md  LOOM_TECH_SCRIPT.md  PITCH_VARIANTS.md  ROBUSTNESS_REPORT.md  SLOP_AUDIT.md  STORYBOARD.md  SUBMISSION_DRAFT.md  SUMMARY.md  WRITEUP.md
docs/archive/5th-hackathon/: JUDGE_SIM.md  LOOM_PRODUCT_SCRIPT.md  PITCH_RECON.md  PITCH_VARIANTS.md  README.md  RUBRIC.md  STORYBOARD.md  SUBMISSION_DRAFT.md  SUMMARY.md
docs/archive/5th-hackathon/pitch/: GAMMA_LINK.md  HTML_AUDIT.md  PRECALL.md  QA_PREP.md  README.md  (+6 more)
scripts/: build_submission.sh  databricks_embed_facilities.py  databricks_setup.py  databricks_uc_setup.py  evaluate.py  evaluate_robustness.py  ingest_vf.py
(+4 files in other folders)
