[project]
name = "aarogya-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "geoalchemy2>=0.19.0",
    "httpx>=0.28.1",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "pydantic>=2",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "shapely>=2.1.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]
